src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/object-type-error.tessla
in a: Events[Int]
in b: Events[Int]

def o := ${x = a-1, z = a+2}

def sumXY(o: ${x: Events[Int], y: Events[Int]}) := o.x + o.y

out sumXY(o)